2003-03-20  Mark Salter  <msalter@redhat.com>

	* cdl/net.cdl (CYGHWR_NET_DRIVERS): Removed to io/eth.

2003-03-18 Barton Meeks  <bartonm2002@yahoo.com>

        * src/tftp_client.c: Reduce size of initial request packet
        for compatibility with some tftp servers.
	
2003-03-14  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/net.cdl: Added CYGDBG_NET_SHOW_MBUFS option to turn on
	accumulation and display of mbuf state information. 

2003-03-06  Gary Thomas  <gary@mlbassoc.com>

	* src/getaddrinfo.c: Need to clear any addresses - malloc() can
	return garbage which the stack desn't like.

2003-03-05  Gary Thomas  <gary@mlbassoc.com>

	* src/getaddrinfo.c: Allow getaddrinfo() to use DNS gethostbyXXX()
	routines if DNS is present.  Also, eliminate some debug messages.

2003-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/getserv.c: Added a servent structure for SNTP.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/net.cdl: Improve doc links.

	* doc/prepare-manpages.sh: Generate namespaced IDs, without shouting.
	* doc/tcpip-manpages.sgml: Regenerated.

2003-01-31  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/net.cdl (CYGPKG_NET_BUILD_HW_TESTS): Requires eth hardware
	devices.
	(CYGPKG_NET_TESTS): Remove from under CYGPKG_NET_BUILD_TESTS (which
	became CYGPKG_NET_BUILD_HW_TESTS) so the loopback tests are always
	built.

2003-01-20  Gary Thomas  <gary@mlbassoc.com>

	* tests/nc_test_slave.c: Improve handling of UDP buffer space - try
	to minimize amount of "idle" time when this occurs.  Since this test
	is just for show, these changes just make the numbers "look" better.

2003-01-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/network_support.c (init_all_network_interfaces): Define buf
	as const.

2003-01-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/network_support.c (init_all_network_interfaces): Added
	support for a hard coded domain name. Inspired by Motoya Kurotsu.
	 
2003-01-09  Andrew Lunn  <andrew.lunn@ascom.ch>
